--- a/.github/workflows/schedular.yml
+++ b/.github/workflows/schedular.yml
@@ -2,7 +2,7 @@ name: Job Schedular
 
 on:
   schedule:
-    - cron: '41 19 * * *'
+    - cron: '0 * * * *'
   push:
     branches:
       - initial  # Change to your main branch name if needed
